--- a/index_2.html
+++ b/index_2.html
@@ -14,11 +14,11 @@
     </audio> -->
     <!-- 星空html -->
     <!-- <div> -->
-    <!-- <div class="container2">
+    <div class="container2">
       <div class="content">
         <canvas id="universe"></canvas>
       </div>
-    </div> -->
+    </div>
     <!-- </div> -->
     <div class="title">
       <!-- EDIT HERE -->
