--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- EDIT HERE -->
       <div class="STARDUST2">
         <i class="em em-balloon" aria-role="presentation" aria-label="BALLOON"></i>
-        <a href="public/css/main.css" type="button" class="button"> Click vào đây đi</a>
+        <a href="index_2.html" type="button" class="button"> Click vào đây đi</a>
         <i class="em em-balloon flip-horizontal" aria-role="presentation" aria-label="BALLOON"></i>
       </div>
       <img class="img" src="./public/images/backgroundform1.jpg" alt="JUNO_OKYO" />
