--- a/index_2.html
+++ b/index_2.html
@@ -18,13 +18,16 @@
   <div class="bg-form">
     <div class="heart-canvas"></div>
       <div class="background-img">
+        <div class="guiem"> Gửi Bùi Thuận Quyên Nhi</div>
         <div class="note">
             <img src="public/images/anhkhungloichuc.png" alt="">
             <div class="text-loichuc"> Gửi cô gái anh thương... </div>
             <p class="text-1">- Chúc em sinh nhật vui vẻ !</p>
             <p class="text-2">- Mong em vui vẻ mỗi ngày !</p>
             <p class="text-3">- Mong em ăn no ngủ ngon !</p>
-            <p class="text-4">- Mỗi ước nguyện của em đều sẽ trở thành sự thật  !</p>
+            <p class="text-4">- Mỗi ước nguyện của em đều sẽ trở thành sự thật !</p>
+            <p class="text-5">- Mong em sớm đạt được những thứ mà em mong muốn trong năm nay !</p>
+            <p class="text-6">- Tuổi mới thì phải iu tui nhiều hơn đóoooo !</p>
           </div>
         </div>
         <div class="avt-box">
@@ -34,7 +37,7 @@
           <span></span>
           <div class="profile_avt">
             <a href="">
-              <img src="public/images/1.jpg" alt="" title="" class="img-main"/>
+              <img src="public/images/qnhi1.jpg" alt="" title="" class="img-main"/>
             </a>
           </div>
         </div>
